--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@
 			hmp.points[i] = dp;
 		}
 		data = {
-			max: hmp.max,
+			max: hmp.max * 1.8,
 			min: 0,
 			data: hmp.points
 		};
+		//console.log(data);
 		heatmapInstance.setData(data);
 		
 	}
